Fix menu bar line height on wrap

--- a/work-in-progress/css/index.css
+++ b/work-in-progress/css/index.css
@@ -103,6 +103,7 @@ p {
     height: 40px;
     padding: 10px;
     margin-bottom: 10px;
+    line-height: 1;
 }
 
 #menu-bar a {
